--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           privacidad.
         </p>
         <p>
-          ¿No tienes una cuenta?
+          ¿No tienes una cuenta, registrate aqui?
           <a class="link" href="registro.html">Registrate </a>
         </p>
       </div>
