--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <input type="submit" value="Login" class="button" />
         <p>
           Al registrarte, aceptas nuestras Condiciones de uso y Política de
-          privacidad.
+          privacidad
         </p>
         <p>
           ¿No tienes una cuenta, registrate aqui?
